hw6/j0gram.output
Terminals unused in grammar

    CASE
    CONTINUE
    DEFAULT
    INSTANCEOF
    NOT_RESERVED
    TYPE_CAST
    CHAR_ERROR
    INT_ERROR
    UNKNOWN
    STRING_ERROR
    OPEN_COMMENT
    THEN
    ':'


State 27 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce


Grammar

    0 $accept: ClassDecl $end

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody

    2 ClassBody: '{' ClassBodyDecls '}'
    3          | '{' '}'

    4 ClassBodyDecls: ClassBodyDecl
    5               | ClassBodyDecls ClassBodyDecl

    6 ClassBodyDecl: FieldDecl
    7              | FieldDeclAssign
    8              | MethodDecl
    9              | ConstructorDecl

   10 FieldDecl: Type VarDecls ';'
   11          | PUBLIC STATIC Type VarDecls ';'

   12 FieldDeclAssign: Type VarDeclarator '=' Expr ';'
   13                | PUBLIC STATIC Type VarDeclarator '=' Expr ';'

   14 OptTypeArray: TypeArray
   15             | Type

   16 TypeArray: Type '[' OptInt ']'
   17          | '[' ']' Type

   18 Type: INT
   19     | DOUBLE
   20     | LONG
   21     | BOOLEAN
   22     | FLOAT
   23     | STRING
   24     | CHAR
   25     | Name

   26 Name: IDENTIFIER
   27     | QualifiedName

   28 QualifiedName: IDENTIFIER '.' Name

   29 VarDecls: VarDeclarator
   30         | VarDecls ',' VarDeclarator

   31 VarDeclarator: IDENTIFIER
   32              | VarDeclarator '[' ']'
   33              | '[' ']' VarDeclarator

   34 MethodReturnVal: OptTypeArray
   35                | VOID

   36 MethodDecl: MethodHeader Block

   37 MethodHeader: PUBLIC STATIC MethodReturnVal MethodDeclarator
   38             | PUBLIC MethodReturnVal MethodDeclarator
   39             | STATIC MethodReturnVal MethodDeclarator
   40             | MethodReturnVal MethodDeclarator

   41 MethodDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   42 FormalParmListOpt: FormalParmList
   43                  | %empty

   44 FormalParmList: FormalParm
   45               | FormalParmList ',' FormalParm

   46 FormalParm: Type VarDeclarator

   47 ConstructorDecl: ConstructorDeclarator Block

   48 ConstructorDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   49 ArgListOpt: ArgList
   50           | %empty

   51 Block: '{' BlockStmtsOpt '}'

   52 BlockStmtsOpt: BlockStmts
   53              | %empty

   54 BlockStmts: BlockStmt
   55           | BlockStmts BlockStmt

   56 BlockStmt: LocalVarDeclStmt
   57          | Stmt

   58 LocalVarDeclStmt: LocalVarDecl ';'

   59 LocalVarDecl: Type VarDecls

   60 Stmt: Block
   61     | ';'
   62     | ExprStmt
   63     | BreakStmt
   64     | ReturnStmt
   65     | IfThenStmt
   66     | IfThenElseStmt
   67     | IfThenElseIfStmt
   68     | WhileStmt
   69     | ForStmt
   70     | SwitchStmt

   71 ExprStmt: StmtExpr ';'

   72 StmtExpr: Assignment
   73         | MethodCall
   74         | InstantiationExpr

   75 SwitchStmt: SWITCH '(' Name ')' Block

   76 IfThenStmt: IF '(' Expr ')' Block

   77 IfThenElseStmt: IF '(' Expr ')' Block ELSE Block

   78 IfThenElseIfStmt: IF '(' Expr ')' Block ElseIfSequence
   79                 | IF '(' Expr ')' Block ElseIfSequence ELSE Block

   80 ElseIfSequence: ElseIfStmt
   81               | ElseIfSequence ElseIfStmt

   82 ElseIfStmt: ELSE IfThenStmt

   83 WhileStmt: WHILE '(' Expr ')' Stmt

   84 ForStmt: FOR '(' ForInit ';' ExprOpt ';' ForUpdate ')' Block

   85 ForInit: StmtExprList
   86        | LocalVarDecl
   87        | %empty

   88 ExprOpt: Expr
   89        | %empty

   90 ForUpdate: StmtExprList
   91          | %empty

   92 StmtExprList: StmtExpr
   93             | StmtExprList ',' StmtExpr

   94 BreakStmt: BREAK ';'
   95          | BREAK IDENTIFIER ';'

   96 ReturnStmt: RETURN ExprOpt ';'

   97 Primary: Literal
   98        | '(' Expr ')'
   99        | FieldAccess
  100        | MethodCall
  101        | IDENTIFIER '[' INTEGER_LITERAL ']'

  102 OptInt: INTEGER_LITERAL
  103       | %empty

  104 Literal: INTEGER_LITERAL
  105        | FLOAT_LITERAL
  106        | BOOLEAN_LITERAL
  107        | STRING_LITERAL
  108        | NULLVAL
  109        | CHARACTER_LITERAL

  110 InstantiationExpr: NEW Type '(' ArgListOpt ')'
  111                  | NEW TypeArray

  112 ArgList: Expr
  113        | ArgList ',' Expr

  114 FieldAccess: Primary '.' IDENTIFIER

  115 MethodCall: Name '(' ArgListOpt ')'
  116           | Name '{' ArgListOpt '}'
  117           | Primary '.' IDENTIFIER '(' ArgListOpt ')'
  118           | Primary '.' IDENTIFIER '{' ArgListOpt '}'

  119 PostFixExpr: Primary
  120            | Name

  121 UnaryExpr: '-' UnaryExpr
  122          | '!' UnaryExpr
  123          | PostFixExpr

  124 MulExpr: UnaryExpr
  125        | MulExpr '*' UnaryExpr
  126        | MulExpr '/' UnaryExpr
  127        | MulExpr '%' UnaryExpr

  128 AddExpr: MulExpr
  129        | AddExpr '+' MulExpr
  130        | AddExpr '-' MulExpr

  131 RelOp: LESS_EQUAL
  132      | GREATER_EQUAL
  133      | '<'
  134      | '>'

  135 RelExpr: AddExpr
  136        | RelExpr RelOp AddExpr

  137 EqExpr: RelExpr
  138       | EqExpr EQUAL RelExpr
  139       | EqExpr NOT_EQUAL RelExpr

  140 CondAndExpr: EqExpr
  141            | CondAndExpr LOGIC_AND EqExpr

  142 CondOrExpr: CondAndExpr
  143           | CondOrExpr LOGIC_OR CondAndExpr

  144 Expr: CondOrExpr
  145     | InstantiationExpr
  146     | Assignment

  147 Assignment: LeftHandSide AssignOp Expr
  148           | LeftHandSide AssignOp
  149           | Type VarDeclarator AssignOp Expr

  150 LeftHandSide: Name
  151             | FieldAccess
  152             | TypeArray

  153 AssignOp: '='
  154         | INCREMENT
  155         | DECREMENT


Terminals, with rules where they appear

    $end (0) 0
    '!' <treeptr> (33) 122
    '%' <treeptr> (37) 127
    '(' <treeptr> (40) 41 48 75 76 77 78 79 83 84 98 110 115 117
    ')' <treeptr> (41) 41 48 75 76 77 78 79 83 84 98 110 115 117
    '*' <treeptr> (42) 125
    '+' <treeptr> (43) 129
    ',' <treeptr> (44) 30 45 93 113
    '-' <treeptr> (45) 121 130
    '.' <treeptr> (46) 28 114 117 118
    '/' <treeptr> (47) 126
    ':' <treeptr> (58)
    ';' <treeptr> (59) 10 11 12 13 58 61 71 84 94 95 96
    '<' <treeptr> (60) 133
    '=' <treeptr> (61) 12 13 153
    '>' <treeptr> (62) 134
    '[' <treeptr> (91) 16 17 32 33 101
    ']' <treeptr> (93) 16 17 32 33 101
    '{' (123) 2 3 51 116 118
    '}' (125) 2 3 51 116 118
    error (256)
    BREAK <treeptr> (258) 94 95
    DOUBLE <treeptr> (259) 19
    ELSE <treeptr> (260) 77 79 82
    FOR <treeptr> (261) 84
    IF <treeptr> (262) 76 77 78 79
    INT <treeptr> (263) 18
    RETURN <treeptr> (264) 96
    VOID <treeptr> (265) 35
    WHILE <treeptr> (266) 83
    CLASS <treeptr> (267) 1
    STRING <treeptr> (268) 23
    BOOLEAN <treeptr> (269) 21
    CASE <treeptr> (270)
    CHAR <treeptr> (271) 24
    CONTINUE <treeptr> (272)
    DEFAULT <treeptr> (273)
    FLOAT <treeptr> (274) 22
    INSTANCEOF <treeptr> (275)
    LONG <treeptr> (276) 20
    NEW <treeptr> (277) 110 111
    SWITCH <treeptr> (278) 75
    NOT_RESERVED <treeptr> (279)
    PUBLIC <treeptr> (280) 1 11 13 37 38
    STATIC <treeptr> (281) 11 13 37 39
    IDENTIFIER <treeptr> (282) 1 26 28 31 41 48 95 101 114 117 118
    INTEGER_LITERAL <treeptr> (283) 101 102 104
    FLOAT_LITERAL <treeptr> (284) 105
    STRING_LITERAL <treeptr> (285) 107
    BOOLEAN_LITERAL <treeptr> (286) 106
    NULLVAL <treeptr> (287) 108
    CHARACTER_LITERAL <treeptr> (288) 109
    INCREMENT <treeptr> (289) 154
    DECREMENT <treeptr> (290) 155
    TYPE_CAST <treeptr> (291)
    LESS_EQUAL <treeptr> (292) 131
    GREATER_EQUAL <treeptr> (293) 132
    EQUAL <treeptr> (294) 138
    NOT_EQUAL <treeptr> (295) 139
    LOGIC_AND <treeptr> (296) 141
    LOGIC_OR <treeptr> (297) 143
    CHAR_ERROR <treeptr> (298)
    INT_ERROR <treeptr> (299)
    UNKNOWN <treeptr> (300)
    STRING_ERROR <treeptr> (301)
    OPEN_COMMENT <treeptr> (302)
    THEN <treeptr> (303)


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    ClassDecl <treeptr> (69)
        on left: 1
        on right: 0
    ClassBody <treeptr> (70)
        on left: 2 3
        on right: 1
    ClassBodyDecls <treeptr> (71)
        on left: 4 5
        on right: 2 5
    ClassBodyDecl <treeptr> (72)
        on left: 6 7 8 9
        on right: 4 5
    FieldDecl <treeptr> (73)
        on left: 10 11
        on right: 6
    FieldDeclAssign <treeptr> (74)
        on left: 12 13
        on right: 7
    OptTypeArray <treeptr> (75)
        on left: 14 15
        on right: 34
    TypeArray <treeptr> (76)
        on left: 16 17
        on right: 14 111 152
    Type <treeptr> (77)
        on left: 18 19 20 21 22 23 24 25
        on right: 10 11 12 13 15 16 17 46 59 110 149
    Name <treeptr> (78)
        on left: 26 27
        on right: 25 28 75 115 116 120 150
    QualifiedName <treeptr> (79)
        on left: 28
        on right: 27
    VarDecls <treeptr> (80)
        on left: 29 30
        on right: 10 11 30 59
    VarDeclarator <treeptr> (81)
        on left: 31 32 33
        on right: 12 13 29 30 32 33 46 149
    MethodReturnVal <treeptr> (82)
        on left: 34 35
        on right: 37 38 39 40
    MethodDecl <treeptr> (83)
        on left: 36
        on right: 8
    MethodHeader <treeptr> (84)
        on left: 37 38 39 40
        on right: 36
    MethodDeclarator <treeptr> (85)
        on left: 41
        on right: 37 38 39 40
    FormalParmListOpt <treeptr> (86)
        on left: 42 43
        on right: 41 48
    FormalParmList <treeptr> (87)
        on left: 44 45
        on right: 42 45
    FormalParm <treeptr> (88)
        on left: 46
        on right: 44 45
    ConstructorDecl <treeptr> (89)
        on left: 47
        on right: 9
    ConstructorDeclarator <treeptr> (90)
        on left: 48
        on right: 47
    ArgListOpt <treeptr> (91)
        on left: 49 50
        on right: 110 115 116 117 118
    Block <treeptr> (92)
        on left: 51
        on right: 36 47 60 75 76 77 78 79 84
    BlockStmtsOpt <treeptr> (93)
        on left: 52 53
        on right: 51
    BlockStmts <treeptr> (94)
        on left: 54 55
        on right: 52 55
    BlockStmt <treeptr> (95)
        on left: 56 57
        on right: 54 55
    LocalVarDeclStmt <treeptr> (96)
        on left: 58
        on right: 56
    LocalVarDecl <treeptr> (97)
        on left: 59
        on right: 58 86
    Stmt <treeptr> (98)
        on left: 60 61 62 63 64 65 66 67 68 69 70
        on right: 57 83
    ExprStmt <treeptr> (99)
        on left: 71
        on right: 62
    StmtExpr <treeptr> (100)
        on left: 72 73 74
        on right: 71 92 93
    SwitchStmt <treeptr> (101)
        on left: 75
        on right: 70
    IfThenStmt <treeptr> (102)
        on left: 76
        on right: 65 82
    IfThenElseStmt <treeptr> (103)
        on left: 77
        on right: 66
    IfThenElseIfStmt <treeptr> (104)
        on left: 78 79
        on right: 67
    ElseIfSequence <treeptr> (105)
        on left: 80 81
        on right: 78 79 81
    ElseIfStmt <treeptr> (106)
        on left: 82
        on right: 80 81
    WhileStmt <treeptr> (107)
        on left: 83
        on right: 68
    ForStmt <treeptr> (108)
        on left: 84
        on right: 69
    ForInit <treeptr> (109)
        on left: 85 86 87
        on right: 84
    ExprOpt <treeptr> (110)
        on left: 88 89
        on right: 84 96
    ForUpdate <treeptr> (111)
        on left: 90 91
        on right: 84
    StmtExprList <treeptr> (112)
        on left: 92 93
        on right: 85 90 93
    BreakStmt <treeptr> (113)
        on left: 94 95
        on right: 63
    ReturnStmt <treeptr> (114)
        on left: 96
        on right: 64
    Primary <treeptr> (115)
        on left: 97 98 99 100 101
        on right: 114 117 118 119
    OptInt <treeptr> (116)
        on left: 102 103
        on right: 16
    Literal <treeptr> (117)
        on left: 104 105 106 107 108 109
        on right: 97
    InstantiationExpr <treeptr> (118)
        on left: 110 111
        on right: 74 145
    ArgList <treeptr> (119)
        on left: 112 113
        on right: 49 113
    FieldAccess <treeptr> (120)
        on left: 114
        on right: 99 151
    MethodCall <treeptr> (121)
        on left: 115 116 117 118
        on right: 73 100
    PostFixExpr <treeptr> (122)
        on left: 119 120
        on right: 123
    UnaryExpr <treeptr> (123)
        on left: 121 122 123
        on right: 121 122 124 125 126 127
    MulExpr <treeptr> (124)
        on left: 124 125 126 127
        on right: 125 126 127 128 129 130
    AddExpr <treeptr> (125)
        on left: 128 129 130
        on right: 129 130 135 136
    RelOp <treeptr> (126)
        on left: 131 132 133 134
        on right: 136
    RelExpr <treeptr> (127)
        on left: 135 136
        on right: 136 137 138 139
    EqExpr <treeptr> (128)
        on left: 137 138 139
        on right: 138 139 140 141
    CondAndExpr <treeptr> (129)
        on left: 140 141
        on right: 141 142 143
    CondOrExpr <treeptr> (130)
        on left: 142 143
        on right: 143 144
    Expr <treeptr> (131)
        on left: 144 145 146
        on right: 12 13 76 77 78 79 83 88 98 112 113 147 149
    Assignment <treeptr> (132)
        on left: 147 148 149
        on right: 72 146
    LeftHandSide <treeptr> (133)
        on left: 150 151 152
        on right: 147 148
    AssignOp <treeptr> (134)
        on left: 153 154 155
        on right: 147 148 149


State 0

    0 $accept: . ClassDecl $end

    PUBLIC  shift, and go to state 1

    ClassDecl  go to state 2


State 1

    1 ClassDecl: PUBLIC . CLASS IDENTIFIER ClassBody

    CLASS  shift, and go to state 3


State 2

    0 $accept: ClassDecl . $end

    $end  shift, and go to state 4


State 3

    1 ClassDecl: PUBLIC CLASS . IDENTIFIER ClassBody

    IDENTIFIER  shift, and go to state 5


State 4

    0 $accept: ClassDecl $end .

    $default  accept


State 5

    1 ClassDecl: PUBLIC CLASS IDENTIFIER . ClassBody

    '{'  shift, and go to state 6

    ClassBody  go to state 7


State 6

    2 ClassBody: '{' . ClassBodyDecls '}'
    3          | '{' . '}'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    LONG        shift, and go to state 15
    PUBLIC      shift, and go to state 16
    STATIC      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    '['         shift, and go to state 19
    '}'         shift, and go to state 20

    ClassBodyDecls         go to state 21
    ClassBodyDecl          go to state 22
    FieldDecl              go to state 23
    FieldDeclAssign        go to state 24
    OptTypeArray           go to state 25
    TypeArray              go to state 26
    Type                   go to state 27
    Name                   go to state 28
    QualifiedName          go to state 29
    MethodReturnVal        go to state 30
    MethodDecl             go to state 31
    MethodHeader           go to state 32
    ConstructorDecl        go to state 33
    ConstructorDeclarator  go to state 34


State 7

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody .

    $default  reduce using rule 1 (ClassDecl)


State 8

   19 Type: DOUBLE .

    $default  reduce using rule 19 (Type)


State 9

   18 Type: INT .

    $default  reduce using rule 18 (Type)


State 10

   35 MethodReturnVal: VOID .

    $default  reduce using rule 35 (MethodReturnVal)


State 11

   23 Type: STRING .

    $default  reduce using rule 23 (Type)


State 12

   21 Type: BOOLEAN .

    $default  reduce using rule 21 (Type)


State 13

   24 Type: CHAR .

    $default  reduce using rule 24 (Type)


State 14

   22 Type: FLOAT .

    $default  reduce using rule 22 (Type)


State 15

   20 Type: LONG .

    $default  reduce using rule 20 (Type)


State 16

   11 FieldDecl: PUBLIC . STATIC Type VarDecls ';'
   13 FieldDeclAssign: PUBLIC . STATIC Type VarDeclarator '=' Expr ';'
   37 MethodHeader: PUBLIC . STATIC MethodReturnVal MethodDeclarator
   38             | PUBLIC . MethodReturnVal MethodDeclarator

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    LONG        shift, and go to state 15
    STATIC      shift, and go to state 35
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 19

    OptTypeArray     go to state 25
    TypeArray        go to state 26
    Type             go to state 37
    Name             go to state 28
    QualifiedName    go to state 29
    MethodReturnVal  go to state 38


State 17

   39 MethodHeader: STATIC . MethodReturnVal MethodDeclarator

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    LONG        shift, and go to state 15
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 19

    OptTypeArray     go to state 25
    TypeArray        go to state 26
    Type             go to state 37
    Name             go to state 28
    QualifiedName    go to state 29
    MethodReturnVal  go to state 39


State 18

   26 Name: IDENTIFIER .
   28 QualifiedName: IDENTIFIER . '.' Name
   48 ConstructorDeclarator: IDENTIFIER . '(' FormalParmListOpt ')'

    '('  shift, and go to state 40
    '.'  shift, and go to state 41

    $default  reduce using rule 26 (Name)


State 19

   17 TypeArray: '[' . ']' Type

    ']'  shift, and go to state 42


State 20

    3 ClassBody: '{' '}' .

    $default  reduce using rule 3 (ClassBody)


State 21

    2 ClassBody: '{' ClassBodyDecls . '}'
    5 ClassBodyDecls: ClassBodyDecls . ClassBodyDecl

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    LONG        shift, and go to state 15
    PUBLIC      shift, and go to state 16
    STATIC      shift, and go to state 17
    IDENTIFIER  shift, and go to state 18
    '['         shift, and go to state 19
    '}'         shift, and go to state 43

    ClassBodyDecl          go to state 44
    FieldDecl              go to state 23
    FieldDeclAssign        go to state 24
    OptTypeArray           go to state 25
    TypeArray              go to state 26
    Type                   go to state 27
    Name                   go to state 28
    QualifiedName          go to state 29
    MethodReturnVal        go to state 30
    MethodDecl             go to state 31
    MethodHeader           go to state 32
    ConstructorDecl        go to state 33
    ConstructorDeclarator  go to state 34


State 22

    4 ClassBodyDecls: ClassBodyDecl .

    $default  reduce using rule 4 (ClassBodyDecls)


State 23

    6 ClassBodyDecl: FieldDecl .

    $default  reduce using rule 6 (ClassBodyDecl)


State 24

    7 ClassBodyDecl: FieldDeclAssign .

    $default  reduce using rule 7 (ClassBodyDecl)


State 25

   34 MethodReturnVal: OptTypeArray .

    $default  reduce using rule 34 (MethodReturnVal)


State 26

   14 OptTypeArray: TypeArray .

    $default  reduce using rule 14 (OptTypeArray)


State 27

   10 FieldDecl: Type . VarDecls ';'
   12 FieldDeclAssign: Type . VarDeclarator '=' Expr ';'
   15 OptTypeArray: Type .
   16 TypeArray: Type . '[' OptInt ']'

    IDENTIFIER  shift, and go to state 45
    '['         shift, and go to state 46

    IDENTIFIER  [reduce using rule 15 (OptTypeArray)]

    VarDecls       go to state 47
    VarDeclarator  go to state 48


State 28

   25 Type: Name .

    $default  reduce using rule 25 (Type)


State 29

   27 Name: QualifiedName .

    $default  reduce using rule 27 (Name)


State 30

   40 MethodHeader: MethodReturnVal . MethodDeclarator

    IDENTIFIER  shift, and go to state 49

    MethodDeclarator  go to state 50


State 31

    8 ClassBodyDecl: MethodDecl .

    $default  reduce using rule 8 (ClassBodyDecl)


State 32

   36 MethodDecl: MethodHeader . Block

    '{'  shift, and go to state 51

    Block  go to state 52


State 33

    9 ClassBodyDecl: ConstructorDecl .

    $default  reduce using rule 9 (ClassBodyDecl)


State 34

   47 ConstructorDecl: ConstructorDeclarator . Block

    '{'  shift, and go to state 51

    Block  go to state 53


State 35

   11 FieldDecl: PUBLIC STATIC . Type VarDecls ';'
   13 FieldDeclAssign: PUBLIC STATIC . Type VarDeclarator '=' Expr ';'
   37 MethodHeader: PUBLIC STATIC . MethodReturnVal MethodDeclarator

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    LONG        shift, and go to state 15
    IDENTIFIER  shift, and go to state 36
    '['         shift, and go to state 19

    OptTypeArray     go to state 25
    TypeArray        go to state 26
    Type             go to state 54
    Name             go to state 28
    QualifiedName    go to state 29
    MethodReturnVal  go to state 55


State 36

   26 Name: IDENTIFIER .
   28 QualifiedName: IDENTIFIER . '.' Name

    '.'  shift, and go to state 41

    $default  reduce using rule 26 (Name)


State 37

   15 OptTypeArray: Type .
   16 TypeArray: Type . '[' OptInt ']'

    '['  shift, and go to state 56

    $default  reduce using rule 15 (OptTypeArray)


State 38

   38 MethodHeader: PUBLIC MethodReturnVal . MethodDeclarator

    IDENTIFIER  shift, and go to state 49

    MethodDeclarator  go to state 57


State 39

   39 MethodHeader: STATIC MethodReturnVal . MethodDeclarator

    IDENTIFIER  shift, and go to state 49

    MethodDeclarator  go to state 58


State 40

   48 ConstructorDeclarator: IDENTIFIER '(' . FormalParmListOpt ')'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    LONG        shift, and go to state 15
    IDENTIFIER  shift, and go to state 36

    $default  reduce using rule 43 (FormalParmListOpt)

    Type               go to state 59
    Name               go to state 28
    QualifiedName      go to state 29
    FormalParmListOpt  go to state 60
    FormalParmList     go to state 61
    FormalParm         go to state 62


State 41

   28 QualifiedName: IDENTIFIER '.' . Name

    IDENTIFIER  shift, and go to state 36

    Name           go to state 63
    QualifiedName  go to state 29


State 42

   17 TypeArray: '[' ']' . Type

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    LONG        shift, and go to state 15
    IDENTIFIER  shift, and go to state 36

    Type           go to state 64
    Name           go to state 28
    QualifiedName  go to state 29


State 43

    2 ClassBody: '{' ClassBodyDecls '}' .

    $default  reduce using rule 2 (ClassBody)


State 44

    5 ClassBodyDecls: ClassBodyDecls ClassBodyDecl .

    $default  reduce using rule 5 (ClassBodyDecls)


State 45

   31 VarDeclarator: IDENTIFIER .

    $default  reduce using rule 31 (VarDeclarator)


State 46

   16 TypeArray: Type '[' . OptInt ']'
   33 VarDeclarator: '[' . ']' VarDeclarator

    INTEGER_LITERAL  shift, and go to state 65
    ']'              shift, and go to state 66

    ']'  [reduce using rule 103 (OptInt)]

    OptInt  go to state 67


State 47

   10 FieldDecl: Type VarDecls . ';'
   30 VarDecls: VarDecls . ',' VarDeclarator

    ','  shift, and go to state 68
    ';'  shift, and go to state 69


State 48

   12 FieldDeclAssign: Type VarDeclarator . '=' Expr ';'
   29 VarDecls: VarDeclarator .
   32 VarDeclarator: VarDeclarator . '[' ']'

    '='  shift, and go to state 70
    '['  shift, and go to state 71

    $default  reduce using rule 29 (VarDecls)


State 49

   41 MethodDeclarator: IDENTIFIER . '(' FormalParmListOpt ')'

    '('  shift, and go to state 72


State 50

   40 MethodHeader: MethodReturnVal MethodDeclarator .

    $default  reduce using rule 40 (MethodHeader)


State 51

   51 Block: '{' . BlockStmtsOpt '}'

    BREAK              shift, and go to state 73
    DOUBLE             shift, and go to state 8
    FOR                shift, and go to state 74
    IF                 shift, and go to state 75
    INT                shift, and go to state 9
    RETURN             shift, and go to state 76
    WHILE              shift, and go to state 77
    STRING             shift, and go to state 11
    BOOLEAN            shift, and go to state 12
    CHAR               shift, and go to state 13
    FLOAT              shift, and go to state 14
    LONG               shift, and go to state 15
    NEW                shift, and go to state 78
    SWITCH             shift, and go to state 79
    IDENTIFIER         shift, and go to state 80
    INTEGER_LITERAL    shift, and go to state 81
    FLOAT_LITERAL      shift, and go to state 82
    STRING_LITERAL     shift, and go to state 83
    BOOLEAN_LITERAL    shift, and go to state 84
    NULLVAL            shift, and go to state 85
    CHARACTER_LITERAL  shift, and go to state 86
    '('                shift, and go to state 87
    ';'                shift, and go to state 88
    '['                shift, and go to state 19
    '{'                shift, and go to state 51

    $default  reduce using rule 53 (BlockStmtsOpt)

    TypeArray          go to state 89
    Type               go to state 90
    Name               go to state 91
    QualifiedName      go to state 29
    Block              go to state 92
    BlockStmtsOpt      go to state 93
    BlockStmts         go to state 94
    BlockStmt          go to state 95
    LocalVarDeclStmt   go to state 96
    LocalVarDecl       go to state 97
    Stmt               go to state 98
    ExprStmt           go to state 99
    StmtExpr           go to state 100
    SwitchStmt         go to state 101
    IfThenStmt         go to state 102
    IfThenElseStmt     go to state 103
    IfThenElseIfStmt   go to state 104
    WhileStmt          go to state 105
    ForStmt            go to state 106
    BreakStmt          go to state 107
    ReturnStmt         go to state 108
    Primary            go to state 109
    Literal            go to state 110
    InstantiationExpr  go to state 111
    FieldAccess        go to state 112
    MethodCall         go to state 113
    Assignment         go to state 114
    LeftHandSide       go to state 115


State 52

   36 MethodDecl: MethodHeader Block .

    $default  reduce using rule 36 (MethodDecl)


State 53

   47 ConstructorDecl: ConstructorDeclarator Block .

    $default  reduce using rule 47 (ConstructorDecl)


State 54

   11 FieldDecl: PUBLIC STATIC Type . VarDecls ';'
   13 FieldDeclAssign: PUBLIC STATIC Type . VarDeclarator '=' Expr ';'
   15 OptTypeArray: Type .
   16 TypeArray: Type . '[' OptInt ']'

    IDENTIFIER  shift, and go to state 45
    '['         shift, and go to state 46

    IDENTIFIER  [reduce using rule 15 (OptTypeArray)]

    VarDecls       go to state 116
    VarDeclarator  go to state 117


State 55

   37 MethodHeader: PUBLIC STATIC MethodReturnVal . MethodDeclarator

    IDENTIFIER  shift, and go to state 49

    MethodDeclarator  go to state 118


State 56

   16 TypeArray: Type '[' . OptInt ']'

    INTEGER_LITERAL  shift, and go to state 65

    $default  reduce using rule 103 (OptInt)

    OptInt  go to state 67


State 57

   38 MethodHeader: PUBLIC MethodReturnVal MethodDeclarator .

    $default  reduce using rule 38 (MethodHeader)


State 58

   39 MethodHeader: STATIC MethodReturnVal MethodDeclarator .

    $default  reduce using rule 39 (MethodHeader)


State 59

   46 FormalParm: Type . VarDeclarator

    IDENTIFIER  shift, and go to state 45
    '['         shift, and go to state 119

    VarDeclarator  go to state 120


State 60

   48 ConstructorDeclarator: IDENTIFIER '(' FormalParmListOpt . ')'

    ')'  shift, and go to state 121


State 61

   42 FormalParmListOpt: FormalParmList .
   45 FormalParmList: FormalParmList . ',' FormalParm

    ','  shift, and go to state 122

    $default  reduce using rule 42 (FormalParmListOpt)


State 62

   44 FormalParmList: FormalParm .

    $default  reduce using rule 44 (FormalParmList)


State 63

   28 QualifiedName: IDENTIFIER '.' Name .

    $default  reduce using rule 28 (QualifiedName)


State 64

   17 TypeArray: '[' ']' Type .

    $default  reduce using rule 17 (TypeArray)


State 65

  102 OptInt: INTEGER_LITERAL .

    $default  reduce using rule 102 (OptInt)


State 66

   33 VarDeclarator: '[' ']' . VarDeclarator

    IDENTIFIER  shift, and go to state 45
    '['         shift, and go to state 119

    VarDeclarator  go to state 123


State 67

   16 TypeArray: Type '[' OptInt . ']'

    ']'  shift, and go to state 124


State 68

   30 VarDecls: VarDecls ',' . VarDeclarator

    IDENTIFIER  shift, and go to state 45
    '['         shift, and go to state 119

    VarDeclarator  go to state 125


State 69

   10 FieldDecl: Type VarDecls ';' .

    $default  reduce using rule 10 (FieldDecl)


State 70

   12 FieldDeclAssign: Type VarDeclarator '=' . Expr ';'

    DOUBLE             shift, and go to state 8
    INT                shift, and go to state 9
    STRING             shift, and go to state 11
    BOOLEAN            shift, and go to state 12
    CHAR               shift, and go to state 13
    FLOAT              shift, and go to state 14
    LONG               shift, and go to state 15
    NEW                shift, and go to state 78
    IDENTIFIER         shift, and go to state 80
    INTEGER_LITERAL    shift, and go to state 81
    FLOAT_LITERAL      shift, and go to state 82
    STRING_LITERAL     shift, and go to state 83
    BOOLEAN_LITERAL    shift, and go to state 84
    NULLVAL            shift, and go to state 85
    CHARACTER_LITERAL  shift, and go to state 86
    '-'                shift, and go to state 126
    '!'                shift, and go to state 127
    '('                shift, and go to state 87
    '['                shift, and go to state 19

    TypeArray          go to state 89
    Type               go to state 128
    Name               go to state 129
    QualifiedName      go to state 29
    Primary            go to state 130
    Literal            go to state 110
    InstantiationExpr  go to state 131
    FieldAccess        go to state 112
    MethodCall         go to state 132
    PostFixExpr        go to state 133
    UnaryExpr          go to state 134
    MulExpr            go to state 135
    AddExpr            go to state 136
    RelExpr            go to state 137
    EqExpr             go to state 138
    CondAndExpr        go to state 139
    CondOrExpr         go to state 140
    Expr               go to state 141
    Assignment         go to state 142
    LeftHandSide       go to state 115


State 71

   32 VarDeclarator: VarDeclarator '[' . ']'

    ']'  shift, and go to state 143


State 72

   41 MethodDeclarator: IDENTIFIER '(' . FormalParmListOpt ')'
